# weekly_report_agent

./: .gitignore  README.md  config.yaml  config.yaml.example  pyproject.toml
.hermes/plans/: 2026-05-03_213000-spec-review-and-implementation.md
docs/: Phase1_MVP_工作清单.md  产品方案_v1.0.md  产品方案_v2.1.md  全阶段工作清单.md
src/: cli.py  config.py  config_manager.py
src/agent/: prompts.py  react_agent.py  schema.py  tools.py
src/collectors/: doc_collector.py  git_collector.py  manual_collector.py
src/generator/: exporter.py  template_engine.py
src/preprocessor/: context_builder.py  token_estimator.py
src/storage/: cache_store.py  log_store.py  vector_store.py
templates/: README.md  minimal.md.j2  minimal.schema.yaml  project.md.j2  project.schema.yaml  standard.md.j2  standard.schema.yaml
weekly_report_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
